Fixes display overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,14 +12,22 @@ h1 {
   text-align: center;
 }
 
+#display-container {
+  height: 50px;
+  width: 198px;
+  display: inline-block;
+  background-color: #5a5a5a;
+}
+
 #display {
   color: white;
+  display: block;
   background-color: #5a5a5a;
-  display: inline-block;
-  width: 198px;
-  padding-top: 20px;
-  height: 50px;
-  font-size: 32px;
+  overflow-wrap: break-word;
+  font-size: 28px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
 }
 
 .button {
